--- a/docs/docker-compose.yaml
+++ b/docs/docker-compose.yaml
@@ -31,11 +31,12 @@ services:
             git config --global --add safe.directory /main # REMOVE BEFORE MERGE
             git branch -D gh-pages || true
             git fetch $${UPSTREAM_REPO} gh-pages:gh-pages || true
-            mike deploy --config-file ./docs/mkdocs.yaml -u $$(grep -oE '\d+\.\d+' /main/$${PACKAGE}/version.py) latest
-            mike set-default --config-file ./docs/mkdocs.yaml latest
-            if echo "$${MODE}" | grep -i qa &>/dev/null; then
-                mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
-            fi
+            # mike deploy --config-file ./docs/mkdocs.yaml -u $$(grep -oE '\d+\.\d+' /main/$${PACKAGE}/version.py) latest
+            # mike set-default --config-file ./docs/mkdocs.yaml latest
+            # if echo "$${MODE}" | grep -i qa &>/dev/null; then
+            #     mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
+            # fi
+            mkdocs gh-deploy --force --verbose --config-file ./docs/mkdocs.yaml # REMOVE
         else
             echo "Unexpected mode..."
             exit 1
