--- a/docs/docker-compose.yaml
+++ b/docs/docker-compose.yaml
@@ -28,15 +28,13 @@ services:
         if echo "$${MODE}" | grep -i live &>/dev/null; then
             mkdocs serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
         elif echo "$${MODE}" | grep -iE "qa|build" &>/dev/null; then
-            git config --global --add safe.directory /main # REMOVE BEFORE MERGE
             git branch -D gh-pages || true
             git fetch $${UPSTREAM_REPO} gh-pages:gh-pages || true
-            # mike deploy --config-file ./docs/mkdocs.yaml -u $$(grep -oE '\d+\.\d+' /main/$${PACKAGE}/version.py) latest
-            # mike set-default --config-file ./docs/mkdocs.yaml latest
-            # if echo "$${MODE}" | grep -i qa &>/dev/null; then
-            #     mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
-            # fi
-            mkdocs gh-deploy --force --verbose --config-file ./docs/mkdocs.yaml # REMOVE
+            mike deploy --config-file ./docs/mkdocs.yaml -u $$(grep -oE '\d+\.\d+' /main/$${PACKAGE}/version.py) latest
+            mike set-default --config-file ./docs/mkdocs.yaml latest
+            if echo "$${MODE}" | grep -i qa &>/dev/null; then
+                mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
+            fi
         else
             echo "Unexpected mode..."
             exit 1
