--- a/docs/docker-compose.yaml
+++ b/docs/docker-compose.yaml
@@ -1,4 +1,4 @@
-# MODE="LIVE|QA|BUILD" PACKAGE=element_deeplabcut UPSTREAM_REPO=https://github.com/datajoint/element-deeplabcut.git HOST_UID=$(id -u) docker compose -f docs/docker-compose.yaml up --build
+# MODE="LIVE|QA|PUSH" PACKAGE=element_deeplabcut UPSTREAM_REPO=https://github.com/datajoint/element-deeplabcut.git HOST_UID=$(id -u) docker compose -f docs/docker-compose.yaml up --build
 #
 # navigate to http://localhost/
 version: "2.4"
@@ -24,16 +24,23 @@ services:
       - sh
       - -c
       - |
+        git config --global --add safe.directory /main
         set -e
         if echo "$${MODE}" | grep -i live &>/dev/null; then
             mkdocs serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
-        elif echo "$${MODE}" | grep -iE "qa|build" &>/dev/null; then
+        elif echo "$${MODE}" | grep -iE "qa|push" &>/dev/null; then
+            echo "INFO::Delete gh-pages branch"
             git branch -D gh-pages || true
-            git fetch $${UPSTREAM_REPO} gh-pages:gh-pages || true
+            echo "INFO::Fetch upstream gh-pages"
+            git fetch $${UPSTREAM_REPO} gh-pages:gh-pages || git switch --orphan gh-pages && git commit --allow-empty -m "init commit"
+            echo "INFO::mike"
             mike deploy --config-file ./docs/mkdocs.yaml -u $$(grep -oE '\d+\.\d+' /main/$${PACKAGE}/version.py) latest
             mike set-default --config-file ./docs/mkdocs.yaml latest
             if echo "$${MODE}" | grep -i qa &>/dev/null; then
                 mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
+            elif echo "$${MODE}" | grep -i push &>/dev/null; then
+                echo "INFO::Push gh-pages to upstream"
+                git push $${UPSTREAM_REPO} gh-pages
             fi
         else
             echo "Unexpected mode..."
