--- a/.github/workflows/u24_element_mkdocs-build.yaml
+++ b/.github/workflows/u24_element_mkdocs-build.yaml
@@ -11,6 +11,7 @@ jobs:
     env:
       DOCKER_CLIENT_TIMEOUT: "120"
       COMPOSE_HTTP_TIMEOUT: "120"
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - name: Deploy docs
