--- a/.github/workflows/u24_element_mkdocs-build.yaml
+++ b/.github/workflows/u24_element_mkdocs-build.yaml
@@ -20,6 +20,6 @@ jobs:
           ELEMENT_UNDERSCORES=${ELEMENT_HYPHENS//-/_}
           export MODE=PUSH
           export PACKAGE=${ELEMENT_UNDERSCORES}
-          export UPSTREAM_REPO=https://${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          export UPSTREAM_REPO=https://action-user:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           export HOST_UID=$(id -u)
           docker compose -f docs/docker-compose.yaml up --exit-code-from docs --build
