Citation to own page. Changelog to top level

--- a/docs/mkdocs.yaml
+++ b/docs/mkdocs.yaml
@@ -7,9 +7,9 @@ nav:
   - Element DeepLabCut: index.md
   - Concepts: concepts.md
   - Tutorials: tutorials.md
-  - About:
-    - Changelog: about/changelog.md
+  - Citation: citation.md
   - API: api/ # defer to gen-files + literate-nav
+  - Changelog: about/changelog.md
 
 # --------------------- NOTES TO CONTRIBUTORS -----------------------
 # 1. The above `nav` establishes the site structure. This should be
