--- a/docs/mkdocs.yaml
+++ b/docs/mkdocs.yaml
@@ -9,40 +9,54 @@ nav:
   - Tutorials: tutorials.md
   - Citation: citation.md
   - API: api/ # defer to gen-files + literate-nav
-  - Changelog: about/changelog.md
+  - Changelog: changelog.md
 
 # --------------------- NOTES TO CONTRIBUTORS -----------------------
-# 1. The above `nav` establishes the site structure. This should be
-#    more-or-less the same across Elements.
-# 2. Follow the google styleguide for best results with docstrings
-#    https://sphinxcontrib-napoleon.readthedocs.io/en/latest/example_google.html
-#    This includes adding typing suggestions to functions
-#    https://docs.python.org/3/library/typing.html
-# 3. To render the site for dev, use the following shell command
-#    ```console 
-#    MODE="LIVE" PACKAGE=element_{ELEMENT} \
-#    UPSTREAM_REPO=https://github.com/datajoint/element-{ELEMENT}.git \
-#    HOST_UID=$(id -u) docker compose -f docs/docker-compose.yaml up --build
-#    ```
-#    The Errors and Warnings mkdocs provides during the build are helpful
-#    for seeing where you may have broken links or docstring issues.
-# 4. To render your fork of the workflow repo prior to PRs, change the
-#    URL in ./docs/src/api/make_pages.py#L19
-# 5. Instead of using bash/shell comment blocks, use `console`
-# 6. Linking to headings requires [link](./relative-doc#sub-heading) format
-#    with (a) hypens instead of spaces, (b) all lowercase
-# 7. For redirect options, see 'redirects' below.
-# 8. Hard wrapping makes it easier to see changes in GitHub reviews. To
-#    get a keyboard shortcut for hard wrapping, see VSCode Rewrap extension.
-#    Be careful not to add line breaks in [multiword links](example.com)
-# 9. The mkdocs google analytics extension requires an environment variable
-#    GOOGLE_ANALYTICS_KEY, also available in LastPass. CICD with this is WIP
-# 10.To deploy this site on your fork, 
-#    (a) declare a branch called gh-pages
-#    (b) go to the your fork > settings > pages 
-#    (c) direct pages to render from the gh-pages branch at root
-#    (d) push a tag to your fork with the format test*.*.*
-
+# Markdown in mkdocs
+# 01. Redering concatenates across single line breaks. This means...
+#     A. We have to be careful to add extra line breaks around paragraphs,
+#        including between the end of a pgf and the beginnign of bullets.
+#     B. We can use hard wrapping to make github reviews easier to read.
+#        VSCode Rewrap extension offers a keyboard shortcut for hard wrap
+#        at the ruler, but don't add breaks in [multiword links](example.com)
+# 02. Instead of designating codeblocks with bash, use console. For example..
+#     ```console
+#     cd ../my_dir
+#     ``` 
+# 03. Links across docs should ...
+#     A. Not involve line breaks.
+#     B. Use relative paths to docs in the same repo
+#     C. Use lowercase and hyphens not spaces: [sub headings](./doc#sub-heading)
+#
+# Files
+# 01. Add a soft link to your changelog with the following
+#     ```console
+#     ln -s ../../../CHANGELOG.md ./docs/src/changelog.md
+#     ```
+#
+# Site rendering
+# 01. Deploy locally to localhost with the command
+#     ```console
+#     MODE="LIVE" PACKAGE=element_{ELEMENT} \
+#     UPSTREAM_REPO=https://github.com/datajoint/element-{ELEMENT}.git \
+#     HOST_UID=$(id -u) docker compose -f docs/docker-compose.yaml up --build
+#     ```
+# 02. Site analytics depend on a local environment variable GOOGLE_ANALYTICS_KEY
+#     You can find this in LastPass or declare with any string to suprress errors
+# 03. The API section will pull docstrings.
+#     A. Follow google styleguide e.g., 
+#        https://sphinxcontrib-napoleon.readthedocs.io/en/latest/example_google.html
+#        With typing suggestions: https://docs.python.org/3/library/typing.html
+#     B. To pull a specific workflow fork, change ./docs/src/api/make_pages.py#L19
+# 04. To see your fork of the workflow-{element} in this render, change the
+#     URL in ./docs/src/api/make_pages.py#L19 to your fork.
+# 05. For redirecting options For redirect options, see 'redirects' below.
+# 06. To deploy this site on your fork, 
+#     A. declare a branch called gh-pages
+#     B. go to the your fork > settings > pages 
+#     C. direct pages to render from the gh-pages branch at root
+#     D. push a tag to your fork with the format test*.*.*
+#
 # ---------------------------- STANDARD -----------------------------
 edit_uri: ./edit/main/docs/src
 docs_dir: ./src
