--- a/docs/docker-compose.yaml
+++ b/docs/docker-compose.yaml
@@ -14,7 +14,8 @@ services:
       - PACKAGE
       - UPSTREAM_REPO
       - MODE
-      - GOOGLE_ANALYTICS_KEY # ALSO THIS?
+      - GOOGLE_ANALYTICS_KEY 
+      - PATCH_VERSION
     volumes:
       - ../docs:/main/docs
       - ../${PACKAGE}:/main/${PACKAGE}
@@ -27,6 +28,7 @@ services:
       - |
         git config --global --add safe.directory /main
         set -e
+        export PATCH_VERSION=$$(cat /main/$${PACKAGE}/version.py | grep -oE '\d+\.\d+\.[a-z0-9]+')
         if echo "$${MODE}" | grep -i live &>/dev/null; then
             mkdocs serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
         elif echo "$${MODE}" | grep -iE "qa|push" &>/dev/null; then
