--- a/docs/docker-compose.yaml
+++ b/docs/docker-compose.yaml
@@ -1,6 +1,7 @@
 # MODE="LIVE|QA|PUSH" PACKAGE=element_deeplabcut UPSTREAM_REPO=https://github.com/datajoint/element-deeplabcut.git HOST_UID=$(id -u) docker compose -f docs/docker-compose.yaml up --build
-#
 # navigate to http://localhost/
+#
+# Check templates: https://github.com/dj-sciops/djsciops-cicd/tree/main/docker-template
 version: "2.4"
 services:
   docs:
@@ -29,7 +30,14 @@ services:
       - |
         git config --global --add safe.directory /main
         set -e
+        export ELEMENT_NAME=$$(echo $${PACKAGE} | sed 's/element_//g')
         export PATCH_VERSION=$$(cat /main/$${PACKAGE}/version.py | grep -oE '\d+\.\d+\.[a-z0-9]+')
+        git clone https://github.com/datajoint/workflow-$${ELEMENT_NAME}.git /main/delete || true
+        if [ -d /main/delete/ ]; then
+          mv /main/delete/workflow_$${ELEMENT_NAME} /main/
+          mv /main/delete/notebooks/*ipynb /main/docs/src/tutorials/
+          rm -fR /main/delete
+        fi
         if echo "$${MODE}" | grep -i live &>/dev/null; then
             mkdocs serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
         elif echo "$${MODE}" | grep -iE "qa|push" &>/dev/null; then
@@ -40,12 +48,12 @@ services:
             echo "INFO::mike"
             mike deploy --config-file ./docs/mkdocs.yaml -u $$(grep -oE '\d+\.\d+' /main/$${PACKAGE}/version.py) latest
             mike set-default --config-file ./docs/mkdocs.yaml latest
-            if echo "$${MODE}" | grep -i qa &>/dev/null; then
-                mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
-            elif echo "$${MODE}" | grep -i push &>/dev/null; then
-                echo "INFO::Push gh-pages to upstream"
-                git push $${UPSTREAM_REPO} gh-pages
-            fi
+            # if echo "$${MODE}" | grep -i qa &>/dev/null; then
+            #     mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
+            # elif echo "$${MODE}" | grep -i push &>/dev/null; then
+            #     echo "INFO::Push gh-pages to upstream"
+            #     git push $${UPSTREAM_REPO} gh-pages
+            # fi
         else
             echo "Unexpected mode..."
             exit 1
