--- a/docs/docker-compose.yaml
+++ b/docs/docker-compose.yaml
@@ -48,12 +48,12 @@ services:
             echo "INFO::mike"
             mike deploy --config-file ./docs/mkdocs.yaml -u $$(grep -oE '\d+\.\d+' /main/$${PACKAGE}/version.py) latest
             mike set-default --config-file ./docs/mkdocs.yaml latest
-            # if echo "$${MODE}" | grep -i qa &>/dev/null; then
-            #     mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
-            # elif echo "$${MODE}" | grep -i push &>/dev/null; then
-            #     echo "INFO::Push gh-pages to upstream"
-            #     git push $${UPSTREAM_REPO} gh-pages
-            # fi
+            if echo "$${MODE}" | grep -i qa &>/dev/null; then
+                mike serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
+            elif echo "$${MODE}" | grep -i push &>/dev/null; then
+                echo "INFO::Push gh-pages to upstream"
+                git push $${UPSTREAM_REPO} gh-pages
+            fi
         else
             echo "Unexpected mode..."
             exit 1
