--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 datajoint>=0.13.0
-element-lab>=0.1.0b0
-element-animal>=0.1.0b0
-element-session>=0.1.0b0
-element-deeplabcut>=0.0.0a0
-element-interface @ git+https://github.com/datajoint/element-interface.git
+element-lab>=0.2.0
+element-animal>=0.1.5
+element-session>=0.1.2
+element-deeplabcut>=0.2.2
+element-interface>=0.5.0
 ipykernel>=6.0.1
 pygit2
