Remove element-interface installation from source

--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -8,8 +8,7 @@ RUN /entrypoint.sh echo "Installed dependencies."
 
 WORKDIR /main/workflow-deeplabcut
 
-# Always get interface/djarchive
-RUN pip install --no-deps "element-interface@git+https://github.com/datajoint/element-interface"
+# Always get djarchive
 RUN pip install --no-deps "djarchive-client@git+https://github.com/datajoint/djarchive-client"
 
 # Always move local - conditional install in setup.sh
