comment `image element_dlc` code line before merge

--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     # build:
     #   context: ..
     #   dockerfile: ./.devcontainer/Dockerfile
-    image: datajoint/element_deeplabcut:latest
+    # image: datajoint/element_deeplabcut:latest
     extra_hosts:
       - fakeservices.datajoint.io:127.0.0.1
     environment:
