--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -3,9 +3,9 @@ services:
   app:
     cpus: 4
     mem_limit: 8g
-    # build:
-    #   context: ..
-    #   dockerfile: ./.devcontainer/Dockerfile
+    build:
+      #   context: ..
+      dockerfile: ./.devcontainer/Dockerfile
     # image: datajoint/element_deeplabcut:latest
     extra_hosts:
       - fakeservices.datajoint.io:127.0.0.1
@@ -19,7 +19,7 @@ services:
     security_opt:
       - apparmor:unconfined
     volumes:
-      - ..:/workspaces/element-deeplabcut:cached
+      #- ..:/workspaces/element-deeplabcut:cached
       - docker_data:/var/lib/docker # persist docker images
     privileged: true # only because of dind
 volumes:
