--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
-#FROM python:3.9-slim@sha256:5f0192a4f58a6ce99f732fe05e3b3d00f12ae62e183886bca3ebe3d202686c7f
-FROM python:3.9-slim
+FROM python:3.9-slim@sha256:5f0192a4f58a6ce99f732fe05e3b3d00f12ae62e183886bca3ebe3d202686c7f
+#FROM python:3.9-slim
 
 ENV PATH /usr/local/bin:$PATH
 ENV PYTHON_VERSION 3.9.17
@@ -20,7 +20,7 @@ RUN \
 
 RUN \
     # dev setup
-    apt-get update && \
+    apt update && \
     apt-get install sudo git bash-completion graphviz default-mysql-client s3fs procps -y && \
     usermod -aG sudo vscode && \
     echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers && \
