--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -3,15 +3,14 @@ services:
   app:
     cpus: 4
     mem_limit: 8g
-    build:
-      context: ..
-      dockerfile: ./.devcontainer/Dockerfile
-    # image: datajoint/element_deeplabcut:latest
+    #build:
+    #  context: ..
+    #  dockerfile: ./.devcontainer/Dockerfile
+    image: datajoint/element_calcium_imaging:latest
     extra_hosts:
       - fakeservices.datajoint.io:127.0.0.1
-    #environment: 
-    #  - DJ_PUBLIC_S3_LOCATION=djhub.vathes.datapub.elements:/deeplabcut-v1
-
+    environment:
+      - DJ_PUBLIC_S3_LOCATION=djhub.vathes.datapub.elements:/calcium-imaging-v2
     devices:
       - /dev/fuse
     cap_add:
@@ -19,7 +18,7 @@ services:
     security_opt:
       - apparmor:unconfined
     volumes:
-      #- ..:/workspaces/element-deeplabcut:cached
+      - ..:/workspaces/element-calcium-imaging:cached
       - docker_data:/var/lib/docker # persist docker images
     privileged: true # only because of dind
 volumes:
