--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -6,11 +6,11 @@ services:
     build:
       context: ..
       dockerfile: ./.devcontainer/Dockerfile
-    #image: datajoint/element_calcium_imaging:latest
+    #image: datajoint/element_deeplabcut:latest
     extra_hosts:
       - fakeservices.datajoint.io:127.0.0.1
-    environment:
-      - DJ_PUBLIC_S3_LOCATION=djhub.vathes.datapub.elements:/calcium-imaging-v2
+    #environment:
+    #  - DJ_PUBLIC_S3_LOCATION=djhub.vathes.datapub.elements:/deeplabcut-v1
     devices:
       - /dev/fuse
     cap_add:
@@ -18,7 +18,7 @@ services:
     security_opt:
       - apparmor:unconfined
     volumes:
-      - ..:/workspaces/element-calcium-imaging:cached
+      #  - ..:/workspaces/element-deeplabcut:cached
       - docker_data:/var/lib/docker # persist docker images
     privileged: true # only because of dind
 volumes:
