--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -41,7 +41,7 @@ ENV DJ_HOST fakeservices.datajoint.io
 ENV DJ_USER root
 ENV DJ_PASS simple
 
-ENV IMAGING_ROOT_DATA_DIR /workspaces/element-calcium-imaging/example_data
+ENV DLC_ROOT_DATA_DIR /workspaces/element-deeplabcut/example_data
 ENV DATABASE_PREFIX neuro_
 
 USER vscode
