--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 	"remoteEnv": {
 		"LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}"
 	},
-	"onCreateCommand": "pip install -e .",
+	"onCreateCommand": "mkdir -p ${DLC_ROOT_DATA_DIR} && pip install -e .",
 	"postStartCommand": "docker volume prune -f",
 	"hostRequirements": {
 		"cpus": 4,
