--- a/docs/docker-compose.yaml
+++ b/docs/docker-compose.yaml
@@ -16,10 +16,11 @@ services:
       - UPSTREAM_REPO
       - MODE
       - PATCH_VERSION
-      - JUPYTER_PLATFORM_DIRS=1
+      #- JUPYTER_PLATFORM_DIRS=1
     volumes:
       - ../docs:/main/docs
       - ../${PACKAGE}:/main/${PACKAGE}
+      - ../notebooks:/main/notebooks
     user: ${HOST_UID}:anaconda
     ports:
       - 80:80
@@ -29,16 +30,14 @@ services:
       - |
         git config --global --add safe.directory /main
         set -e
-        export ELEMENT_NAME=$$(echo $${PACKAGE} | sed 's/element_//g')
+        export ELEMENT_UNDERSCORE=$$(echo $${PACKAGE} | sed 's/element_//g')
+        export ELEMENT_HYPHEN=$$(echo $${ELEMENT_UNDERSCORE} | sed 's/_/-/g')
         export PATCH_VERSION=$$(cat /main/$${PACKAGE}/version.py | grep -oE '\d+\.\d+\.[a-z0-9]+')
-        git clone https://github.com/datajoint/workflow-$${ELEMENT_NAME}.git /main/delete || true
-        if [ -d /main/delete/ ]; then
-          mv /main/delete/workflow_$${ELEMENT_NAME} /main/
-          mv /main/delete/notebooks/*ipynb /main/docs/src/tutorials/
-          rm -fR /main/delete
-        fi
+
+        cp /main/notebooks/tutorial.ipynb /main/docs/src/tutorials/
+
         if echo "$${MODE}" | grep -i live &>/dev/null; then
-            mkdocs serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80
+            mkdocs serve --config-file ./docs/mkdocs.yaml -a 0.0.0.0:80 2>&1 | tee docs/temp_mkdocs.log
         elif echo "$${MODE}" | grep -iE "qa|push" &>/dev/null; then
             echo "INFO::Delete gh-pages branch"
             git branch -D gh-pages || true
