test `dlc_default` in `Dockerfile`

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -34,7 +34,7 @@ RUN \
     pip install ffmpeg graphviz && \
     #apt-get install gcc psutils ffmpeg graphviz && \
     #pip install numcodecs && \
-    pip install --no-cache-dir -e /tmp/element-deeplabcut[elements] && \
+    pip install --no-cache-dir -e /tmp/element-deeplabcut[elements,dlc_default] && \
     #TO-DO: ADD element-deeplabcut[dlc_default,tests]
     # clean up
     rm -rf /tmp/element-deeplabcut/ && \
