--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -31,10 +31,10 @@ COPY ./ /tmp/element-deeplabcut/
 
 RUN \
     # pipeline dependencies
-    pip install ffmpeg graphviz && \
-    #apt-get install gcc psutils ffmpeg graphviz && \
+    #pip install gcc ffmpeg graphviz && \
+    apt-get install gcc ffmpeg graphviz && \
     #pip install numcodecs && \
-    pip install --no-cache-dir -e /tmp/element-deeplabcut[elements,dlc_default] && \
+    #pip install --no-cache-dir -e /tmp/element-deeplabcut[elements] && \
     #TO-DO: ADD element-deeplabcut[dlc_default,tests]
     # clean up
     rm -rf /tmp/element-deeplabcut/ && \
