--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -43,8 +43,8 @@ ENV DJ_USER root
 ENV DJ_PASS simple
 
 ENV DLC_ROOT_DATA_DIR /workspaces/element-deeplabcut/example_data
-ENV CURRENT_PROJECT_FOLDER Top_tracking-DataJoint-2023-08-03
-ENV DATABASE_PREFIX neuro_
+ENV CURRENT_PROJECT_FOLDER from_top_tracking
+ENV DATABASE_PREFIX dlc_
 
 USER vscode
 CMD bash -c "sudo rm /var/run/docker.pid; sudo dockerd"
